# raytracing-engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  example-scene.txt  frames-to-gif.sh
examples/: scene.props
examples/scene-01/: scene.props
inc/: Camera.h  Camera.hpp  Color.hpp  ImageBuffer.hpp  Material.h  Material.hpp  Raycast.hpp  RenderCanvas.h  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  Sphere.h  Sphere.hpp
inc/core/: Camera.hpp  Logger.hpp  Material.hpp  Mesh.hpp  Renderer.hpp  Scene.hpp  Shapes.hpp
inc/loaders/: ModelLoader.hpp  SceneLoader.hpp
inc/math/: BoundingBox.hpp  Matrix.hpp  Vector.hpp
inc/vulkan/: VulkanBuffer.hpp  VulkanComputePipeline.hpp  VulkanContext.hpp
shaders/: raytracer.comp
shaders/common/: constants.glsl  material.glsl  ray.glsl  rng.glsl  shape.glsl
shaders/shared/: binding-constants.h  compute-constants.h
src/: Camera.cpp  Color.cpp  ImageBuffer.cpp  Main.cpp  Raytracer.cpp  RenderCanvas.cpp  Renderer.cpp  Sphere.cpp
src/core/: Camera.cpp  Renderer.cpp  Scene.cpp
src/loaders/: ModelLoader.cpp  SceneLoader.cpp
src/vulkan/: VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanContext.cpp
